--- a/view/adminhtml/layout/omercontact_message_index.xml
+++ b/view/adminhtml/layout/omercontact_message_index.xml
@@ -13,10 +13,29 @@
                         <argument name="default_dir" xsi:type="string">ASC</argument>
                         <argument name="save_parameters_in_session" xsi:type="string">1</argument>
                     </arguments>
+                    <block class="Magento\Backend\Block\Widget\Grid\Massaction" name="omer_contact_message_grid.massaction" as="grid.massaction">
+                    <arguments>
+                        <argument name="massaction_id_field" xsi:type="string">id</argument>
+                        <argument name="form_field_name" xsi:type="string">ids</argument>
+                        <argument name="use_select_all" xsi:type="string">1</argument>
+                        <argument name="options" xsi:type="array">
+                            <item name="delete" xsi:type="array">
+                                <item name="label" xsi:type="string" translate="true">Delete</item>
+                                <item name="url" xsi:type="string">omercontact/message/massDelete</item>
+                                <item name="confirm" xsi:type="string" translate="true">Are you sure you want to delete selected?</item>
+                                <item name="selected" xsi:type="string">1</item>
+                            </item>
+                        </argument>
+                    </arguments>
+                </block>
                     <block class="Magento\Backend\Block\Widget\Grid\ColumnSet" name="omer_contact_message_grid.grid.columnSet" as="grid.columnSet">
                         <arguments>
+                            <argument name="id" xsi:type="string">designGrid</argument>
                             <argument name="rowUrl" xsi:type="array">
                                 <item name="path" xsi:type="string">*/*/edit</item>
+                                <item name="extraParamsTemplate" xsi:type="array">
+                                    <item name="id" xsi:type="string">getId</item>
+                                </item>
                             </argument>
                         </arguments>
                         <block class="Magento\Backend\Block\Widget\Grid\Column" as="id">
